@@ -15,11 +15,12 @@ More solenoids found for LTD's Force & Haunted Hotel
 More lamps found for LTD's Space Poker
 Increased IRQ for LTD system III, seems to help with ball detection in outhole
 
-*** ROM SUPPORT *** Thanks to Soren, ipdb.org
+*** ROM SUPPORT *** Thanks to Soren, ipdb.org, Silvio Finotti
 Clones:
 Demolition Man LX-4C (competition MOD) (updated)
 Demolition Man H-6C (competition MOD) (updated)
 Flintstones, The LX-3
+Oba-Oba (old hardware)
 Space Train (old hardware)
 Theatre of Magic 1.3XC (competition MOD) (updated)
 
